# ferristream

./: Cargo.toml  LICENSE  README.md  TODO.md
.github/workflows/: ci.yml  publish.yml
src/: config.rs  doctor.rs  history.rs  lib.rs  main.rs  opensubtitles.rs  prowlarr.rs  streaming.rs  tmdb.rs  torznab.rs
src/extensions/: discord.rs  mod.rs  trakt.rs
src/tui/: app.rs  mod.rs  ui.rs
tests/: tmdb_integration.rs
