[package]
name = "ferristream"
version = "0.0.2"
edition = "2021"

[dependencies]
librqbit = { version = "8.1.1", default-features = false, features = ["http-api", "tracing-subscriber-utils", "rust-tls"] }
ratatui = "0.29.0"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive", "rc"] }
toml = "0.8"
directories = "5.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
urlencoding = "2.1"
quick-xml = "0.37"
sha1_smol = "1.0"
url = "2.5"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1"
which = "7"
